--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,77 @@
+   <!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <title>Bootstrap Starter Page</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+<body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            Food, LLC
+          </div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+        </div>
+
+        <div id="bs-example" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar_right visible-xs">
+            <li>
+              Chicken <hr>
+            </li>
+            <li>
+              Beef<hr>
+            </li>
+            <li>
+              Sushi
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+  </header>
+
+  <div class="container">
+    <p class="text-center title">Our Menu</p>
+    <div class="row">
+      <div class="col-xs-12">
+        <p class="text-center Chicken">Chicken</p>
+        <p class="text">A chicken is a young poultry, male or female, of the subspecies Gallus gallus domesticus, reared for its flesh. In the case of the same animal, the production conditions of broilers differ from those of laying hens which are reared for their eggs. For example, the growth rate of laying hens is much lower than that of broilers.
+
+        In France, chicken farming is mainly intensive, meaning that animals are reared in large numbers in closed buildings for an average of 35 days.
+
+        The selection of breeders and the development of new types of feeding make it possible to accelerate the growth of birds in order to produce many muscles, which is not without risk for the health of animals.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+</html>
