--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -14,7 +14,7 @@
 
     <title>Bootstrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="lecture25/css/styles.css">
+    <link rel="stylesheet" href="Lecture25/css/styles.css">
   </head>
 <body>
   <header>
