--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -13,7 +13,7 @@
     <![endif]-->
 
     <title>Bootstrap Starter Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="Lecture/css/bootstrap.min.css">
     <link rel="stylesheet" href="Lecture25/css/styles.css">
   </head>
 <body>
