--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -13,8 +13,8 @@
     <![endif]-->
 
     <title>Bootstrap Starter Page</title>
-    <link rel="stylesheet" href="Lecture25/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Lecture25/css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
   <header>
